--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alexander and Ahsan form</title>
 
+    <style>
+        /* css part */
+    </style>
+</head>
+<body>
+    
+    
 <div class="container">
     <header class="header">
       <h1 id="title" class="text-center">Alexander and Ahsan Form</h1>
@@ -212,3 +226,5 @@
     </form>
   </div>
   
+</body>
+</html>
